# xladmin

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_GUIDE.md
.github/workflows/: backend-import-export.yml  backend.yml  frontend-import-export.yml  frontend.yml
.run/: backend import-export major.run.xml  backend import-export minor.run.xml  backend import-export patch.run.xml  backend major.run.xml  backend minor.run.xml  backend patch.run.xml  del builds.run.xml  frontend import-export major.run.xml  frontend import-export minor.run.xml  frontend import-export patch.run.xml  frontend major.run.xml  frontend minor.run.xml  frontend patch.run.xml  ruff --fix.run.xml
docs/: README.ru.md  RELEASE_GUIDE.md
scripts/: release.ps1  release.py
xladmin-backend/: README.md  pyproject.toml
xladmin-backend/docs/: HOW_TO_USE.md
xladmin-backend/src/xladmin/: __init__.py  config.py  delete_preview.py  i18n.py  introspection.py  introspection_fields.py  introspection_meta.py  introspection_values.py  registry.py  router.py  router_mutations.py  router_queries.py  router_schemas.py  serializer.py
xladmin-backend/tests/: _router_helpers.py  test_registry.py  test_router.py  test_router_delete_preview.py  test_router_filters.py  test_router_i18n.py  test_router_items.py
xladmin-backend/xladmin-core/: .env.example  README.md  pyproject.toml
xladmin-backend/xladmin-core/docs/: HOW_TO_USE.en.md  HOW_TO_USE.md  HOW_TO_USE.ru.md  README.ru.md
xladmin-backend/xladmin-core/src/xladmin/: __init__.py  config.py  i18n.py  introspection.py  introspection_fields.py  introspection_meta.py  introspection_values.py  registry.py  router.py  router_mutations.py  router_queries.py  router_schemas.py  serializer.py
xladmin-backend/xladmin-core/tests/: _router_helpers.py  conftest.py  test_registry.py  test_router_auth.py  test_router_filters.py  test_router_items.py
xladmin-backend/xladmin-import-export/: README.md  pyproject.toml
xladmin-backend/xladmin-import-export/docs/: README.ru.md
xladmin-backend/xladmin-import-export/src/xladmin_import_export/: __init__.py  config.py  router.py  schemas.py  service.py
xladmin-backend/xladmin-import-export/tests/: test_router.py
xladmin-frontend/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
xladmin-frontend/docs/: HOW_TO_USE.md  README.ru.md
xladmin-frontend/scripts/: clean.mjs  postbuild.mjs
xladmin-frontend/src/: cache.test.ts  client.test.ts  client.ts  i18n.tsx  index.ts  next.tsx  router.test.ts  router.tsx
xladmin-frontend/src/components/: AdminFieldEditor.tsx  AdminFormDialog.tsx  AdminHome.tsx  AdminModelPage.tsx  AdminNavLink.tsx  AdminObjectPage.tsx  AdminShell.tsx  AdminSidebar.tsx  DeletePreviewDialog.tsx  FieldEditor.tsx  FormDialog.tsx  ModelPage.tsx  ModelsBlocks.tsx  NavLink.tsx  ObjectPage.tsx  OverviewPage.tsx  Shell.tsx
xladmin-frontend/src/components/layout/: Main.tsx  MainHeader.tsx  ShellContext.tsx  Sidebar.tsx
xladmin-frontend/src/components/model-page/: ListFiltersBar.tsx  ListRow.tsx  SearchField.tsx
xladmin-frontend/src/components/models-blocks/: BlockTitle.tsx  (+3 more)
xladmin-frontend/src/hooks/: useAdminRequest.ts
xladmin-frontend/src/theme/: defaultAdminTheme.ts
xladmin-frontend/src/types/: index.ts
xladmin-frontend/src/utils/: adminFields.test.ts  adminFields.ts
(+2 files in other folders)
