[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xladmin-import-export"
version = "0.1.1"
description = "Optional import/export extension for xladmin backend."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Artasov"}]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "xladmin>=0.2.8,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/Artasov/xladmin/tree/main/xladmin-backend/xladmin-import-export"
Repository = "https://github.com/Artasov/xladmin"
Issues = "https://github.com/Artasov/xladmin/issues"

[project.optional-dependencies]
test = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]
dev = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "build>=1.2.2",
    "httpx>=0.28.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.0",
    "twine>=6.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xladmin_import_export = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
packages = ["xladmin_import_export"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.uv.sources]
xladmin = { path = "../xladmin-core", editable = true }
